--- a/core/templates/core/gsc_form.html
+++ b/core/templates/core/gsc_form.html
@@ -18,18 +18,26 @@
       rel="stylesheet"
       href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"
     />
+    <link
+      rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
   <body>
     {% load staticfiles %}
-
       <b-container fluid id="gsc-form">
+        <b-button @click="goHome" > <i class="fas fa-home"></i> Colossus</b-button>
         <b-card
         id="gsc-card"
         overlay
@@ -39,37 +47,37 @@
         >
           <b-card-text class="show-hide">
               <h3> GSC Submission Helper</h3>
-          </b-card-text> 
-        </b-card>      
-        <b-card>
+          </b-card-text>
+        </b-card>
 
+        <b-card>
           <b-collapse v-model="showCollapse" id="collapse-1">
           <b-container id="bottom-selector">
               <b-row >
                   <b-col>
-                      <i class="fa fa-child"></i> Libraries:
-                      <b-form-input v-model="search_library_key"></b-form-input>
-                      <b-form-select v-model="selected_lib_in_libs" :options="libraryDisplay" multiple :select-size="4"></b-form-select>
+                      <i class="fa fa-child" ></i></i> Libraries:
+                      <b-form-input v-model="searchLibraryKey"></b-form-input>
+                      <b-form-select v-model="selectedInLibs" :options="libraryDisplay" multiple :select-size="4"></b-form-select>
                       <b-button class="my-button"  v-on:click="addSelectedLib" variant="primary">Add</b-button>
                   </b-col>
                   <b-col>
                       <i class="fa fa-edit"></i> Selected:
-                      <b-form-input v-model="search_selected_key"></b-form-input>
-                      <b-form-select v-model="selected_libs_in_selected" :options="selectedDisplay" multiple :select-size="4"></b-form-select>
-                      <b-button class="my-button" v-show="!selected_empty" v-on:click="removeAllLibs" variant="primary">Remove All</b-button>
-                      <b-button class="my-button  remove-button" v-show="!selected_empty" v-on:click="removeSelectedLib" variant="primary">Remove</b-button>
+                      <b-form-input v-model="searchSelectedKey"></b-form-input>
+                      <b-form-select v-model="selectedInSelected" :options="selectedDisplay" multiple :select-size="4"></b-form-select>
+                      <b-button class="my-button" v-show="!selectedEmpty" v-on:click="removeAllLibs" variant="primary">Remove All</b-button>
+                      <b-button class="my-button  remove-button" v-show="!selectedEmpty" v-on:click="removeSelectedLib" variant="primary">Remove</b-button>
                   </b-col>
               </b-row>
-          </b-container>  
+          </b-container>
           </b-collapse>
 
-          <b-collapse id="collapse-2">  
+          <b-collapse id="collapse-2">
           <b-container fluid class="inner-container" id="bottom-result">
-              <b-card-text class="text-center" v-if="noLibrariesSelected"> 
-                No libraries were selected.
+              <b-card-text class="text-center" v-if="noLibrariesSelected">
+                {% verbatim %} {{errorMsg}}{% endverbatim %}
               </b-card-text>
             <b-table responsive hover small :items="results"></b-table>
-          </b-container>        
+          </b-container>
           </b-collapse>
 
 
@@ -82,9 +90,19 @@
           class="mb-2 rounded-0"
           text-variant="white"
         >
+          <b-container>
+            <b-button class="download-button show-hide" v-show="showCollapse" @click="downloadSelectedSublibraryInfo"> Download CSV </b-button>
             <b-button class="show-button show-hide" v-show="showCollapse" v-b-toggle.collapse-2 v-on:click="showSelectedData"> Show List </b-button>
             <b-button class="back-button show-hide" v-show="!showCollapse" v-b-toggle.collapse-2 v-on:click="showSelectedData"> Back </b-button>
           </b-container>
+        </b-card>
+
+        <b-card v-for="(item) in log" v-model="log" v-bind:key="item.status">
+          {% verbatim %} {{item.status}} {% endverbatim %}
+          <div v-if="!downloaded" class="spinner-border spinner-border-sm float-right" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div v-else style="float: right;"><i class="fas fa-check"></i></div>
         </b-card>
       </b-container>
     </div>
@@ -94,143 +112,190 @@
         el: '#gsc-form',
         data: {
           showCollapse: true,
-          search_library_key: "",
-          search_selected_key: "",
-          selected_lib_in_libs: [],
-          selected_libs_in_selected: [],
-          all_libraries: [],
+          searchLibraryKey: "",
+          searchSelectedKey: "",
+          selectedInLibs: [],
+          selectedInSelected: [],
+          allLibraries: [],
           results: [],
-          selected_empty: true,
-          libraries_selected: [],
-          error_msg: "No libraries were selected.",
+          csvString: "",
+          log: [],
+          selectedEmpty: true,
+          downloaded: false,
+          currentLibraryResponse: {},
+          configData: {},
+          librariesSelected: [],
+          errorMsg: "No libraries were selected.",
         },
         methods: {
-
+          goHome: function() {
+            window.location = window.origin
+          },
           addSelectedLib: function() {
-            for (var i=0; i < this.all_libraries.length; i++){
-              if (this.selected_lib_in_libs.includes(this.all_libraries[i].value)){
-                this.all_libraries[i].userselect = true
-                this.libraries_selected.push(this.all_libraries[i])
+            for (var i=0; i < this.allLibraries.length; i++){
+              if (this.selectedInLibs.includes(this.allLibraries[i].value)){
+                this.allLibraries[i].userselect = true
+                this.librariesSelected.push(this.allLibraries[i])
               }
-            } 
+            }
             this.showRemoveButton()
           },
           removeSelectedLib: function() {
-            for (var i=0; i < this.all_libraries.length; i++){
-              if (this.selected_libs_in_selected.includes(this.all_libraries[i].value)){
-                console.log(`removing ${this.all_libraries[i].text}`)
-                this.all_libraries[i].userselect = false
-                this.libraries_selected.pop(this.all_libraries[i])
+            for (var i=0; i < this.allLibraries.length; i++){
+              if (this.selectedInSelected.includes(this.allLibraries[i].value)){
+                console.log(`removing ${this.allLibraries[i].text}`)
+                this.allLibraries[i].userselect = false
+                this.librariesSelected.pop(this.allLibraries[i])
               }
             }
             this.showRemoveButton()
           },
-
           removeAllLibs: function() {
-              for (var i=0; i < this.all_libraries.length; i++){
-                if (this.all_libraries[i].userselect) {
-                  console.log(`removing ${this.all_libraries[i].text}`)
-                  this.all_libraries[i].userselect = false
+              for (var i=0; i < this.allLibraries.length; i++){
+                if (this.allLibraries[i].userselect) {
+                  console.log(`removing ${this.allLibraries[i].text}`)
+                  this.allLibraries[i].userselect = false
                 }
-
-                this.libraries_selected = []
+                this.librariesSelected = []
               }
               this.showRemoveButton()
           },
-
           showRemoveButton: function() {
-            this.selected_empty = (this.libraries_selected.length == 0 ? true: false)
+            this.selectedEmpty = (this.librariesSelected.length == 0 ? true: false)
           },
-
           updateCollapse: function() {
             this.showCollapse = !this.showCollapse
           },
-
           showSelectedData: function() {
             this.updateCollapse()
             var selectedlist = []
-
-            for (var i=0; i < this.libraries_selected.length; i++){
-              selectedlist.push(this.libraries_selected[i].value)
-              console.log(this.libraries_selected[i].value)
+            for (var i=0; i < this.librariesSelected.length; i++){
+              selectedlist.push(this.librariesSelected[i].value)
+              console.log(this.librariesSelected[i].value)
             }
-
             if (selectedlist.length == 0){
               console.log("No libraries selected")
             }
-
             else {
-              console.log(`${this.libraries_selected.length} selected`)
+              console.log(`${this.librariesSelected.length} selected`)
             }
-
             axios(
               {
                 method: 'post',
-                url: "https://colossus.canadacentral.cloudapp.azure.com/core/gsc_data",
+                url: window.origin + "/core/gsc_data",
                 dataType: "json",
                 data: {
                   "selected" : selectedlist
                   },
                 headers: {
-                  "X-CSRFToken": Cookies.get('csrftoken'), 
-                  "content-type": "application/json" 
+                  "X-CSRFToken": Cookies.get('csrftoken'),
+                  "content-type": "application/json"
                 }
               }
             ).then( (response) => {
               this.results = response.data
               }
             )
-          }
+          },
+          createCSV: function() {
+              this.csvString = this.currentLibraryResponse.data
+
+              // create hyperlink element
+              var element = document.createElement('a');
+              // add attributes
+              element.setAttribute(
+                  'href',
+                  // specify data's media type, and replace URL reserved characters with their UTF-8 encoding
+                  'data:text/plain;charset=utf-8,' + encodeURIComponent(this.csvString)
+              );
+              // when this link is clicked, download it with this name
+              element.setAttribute('download', this.filename);
+              // once this element is appended in the DOM, don't display this element
+              element.style.display = 'none';
+              // append in DOM, then clean up
+              document.body.appendChild(element);
+              element.click();
+              document.body.removeChild(element);
+              this.downloaded = true
+              this.log.pop()
+              status = `Downloaded ${this.filename}`
+              this.log.push({status: status})
+          },
+          downloadSelectedSublibraryInfo: function() {
+            this.log = []
+            this.downloaded = false
+            for (var i=0; i < this.librariesSelected.length; i++){
+              axios(
+                {
+                  method: 'post',
+                  url: window.origin + "/core/download_sublibrary",
+                  dataType: "json",
+                  data: {
+                    "libraryPk" : this.librariesSelected[i].value,
+                    "libraryName" : this.librariesSelected[i].text
+                  },
+                  headers: {
+                    "X-CSRFToken": Cookies.get('csrftoken'),
+                    "content-type": "application/json"
+                  }
+                }
+              ).then( (response) => {
+                  this.currentLibraryResponse = response
+                  this.configData = JSON.parse(this.currentLibraryResponse.config.data)
+                  this.filename = `${this.configData.libraryName}_sublibrary_info.csv`
+                  var status = `Downloading ${this.filename}  \n`
+                  this.log.push({status: status})
+                  this.createCSV()
+                }
+              )
+            }
+          },
         },
         computed: {
           libraryDisplay() {
-            var filter = this.search_library_key
-
-            search_results = this.all_libraries.filter(function (library) {
+            var filter = this.searchLibraryKey
+            search_results = this.allLibraries.filter(function (library) {
               return !library.userselect && library.text.toLowerCase().includes(filter.toLowerCase())
             })
             search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
             return search_results
           },
-
           selectedDisplay() {
-            var filter = this.search_selected_key
-            search_results = this.all_libraries.filter(function (library) {
+            var filter = this.searchSelectedKey
+            search_results = this.allLibraries.filter(function (library) {
               return library.userselect && library.text.toLowerCase().includes(filter.toLowerCase())
             })
+            search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
 
             search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
             
             return search_results
           },
-
           noLibrariesSelected() {
-            return this.libraries_selected.length === 0
+            return this.librariesSelected.length === 0
           },
-
           get_error_message() {
-            return this.error_msg
-          }
+            return this.errorMsg
+          },
         },
         created: function() {
-          this.all_libraries = JSON.parse(unescape("{{libraries| safe | escapejs}}"))
+          this.allLibraries = JSON.parse(unescape("{{libraries| safe | escapejs}}"))
         },
       })
     </script>
 
     <style>
-
     #gsc-form {
         padding-top: 4%;
         width: 800px;
     }
-    
+
     #gsc-card {
       width: 100%;
       margin: 0 auto;
       border-radius: 100px;
+      padding: 10px;
     }
-
     .show-button {
       background-color: #a3a3a3;
       border-color: #a3a3a3;
@@ -238,50 +303,41 @@
       vertical-align: middle;
       width: 7em;
     }
-
     #bottom-selector {
       height:220px;
       align-content: center;
       padding: 10px;
-
     }
     #bottom-result {
       padding: 10px;
       max-height:500px;
       overflow-y: scroll;
     }
-
-    .show-hide { 
-      display: none; 
+    .show-hide {
+      display: none;
     }
-
     /* Hide/Show elements when window is resized*/
     @media screen and (min-width: 768px) {
       .show-hide  { display: block; }
       #leftside > button { display: none; }
     }
-
     .my-button {
       background-color: #76ccc7;
       border-color: #76ccc7;
       float: right;
       margin-top: 0.3em
     }
-
     .my-button:hover {
       background-color: #5faaa5;
       border-color: #5faaa5;
     }
-
     .submit-button {
         float: right;
         margin-top: 0.3em
     }
-
     .remove-button {
         margin: 5px;
     }
-
     .back-button {
       background-color: #a3a3a3;
       border-color: #a3a3a3;
@@ -289,7 +345,6 @@
       vertical-align: middle;
       width: 7em;
     }
-
     .download-button {
       background-color: #a3a3a3;
       border-color: #a3a3a3;
@@ -297,15 +352,12 @@
       vertical-align: middle;
       width: 9em;
     }
-
     .container-fluid {
         width: 75% !important;
     }
-
     .inner-container {
       width: 100% !important;
     }
-
     </style>
   </body>
 </html>
