starting doublet form

--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -365,7 +365,14 @@
             <h5><i class="text-warning">There is no sublibrary information for this library!</i></h5>
         {% endif %}
     </div>
+    <div class="container detail-bordered-container">
+        <h4>Doublet Information</h4>
+    </div>
+
 {% endif %}
+
+<!-- ADD DOUBLET INFORMATION HERE -->
+
 <!-- end of Sublibrary Information -->
 {% if library_type == 'dlp' or library_type == 'pbal' %}
 <!-- Sequencing Information -->
