--- a/core/templates/core/vue/status-page.html
+++ b/core/templates/core/vue/status-page.html
@@ -4,11 +4,24 @@
 {% block body %}
 
 <div id="app">
-  
+    <div>
+      <md-table v-model="information" md-sort="name" md-sort-order="asc" md-card md-fixed-header>
+        <md-table-toolbar>
+        <h1 class="md-title">Status Page</h1>
+        </md-table-toolbar>
+
+        <md-table-row slot="md-table-row" slot-scope="{ item }">
+        <md-table-cell md-label="ID" md-sort-by="id" md-numeric>{{ item.id }}</md-table-cell>
+        </md-table-row>
+      </md-table>
+    </div>
 </div>
 <script>
   new Vue({
-    el: '#app'
+    el: '#app',
+    data: {
+      information: [{id: 3}]
+    },
   })
 </script>
 {% endblock %}
