--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -367,6 +367,11 @@
     </div>
     <div class="container detail-bordered-container">
         <h4>Doublet Information</h4>
+        {% if library.sublibraryinformation_set.all %}
+            <h5>Add doublet information here </h5>
+        {% else %}
+            <h5><i class="text-warning">There is no sublibrary information for this library!</i></h5>
+        {% endif %}
     </div>
 
 {% endif %}
