--- a/core/templates/core/vue/status-page.html
+++ b/core/templates/core/vue/status-page.html
@@ -12,6 +12,13 @@
           </div>
           <div >
             <md-content class="topmenu">
+              <md-menu>
+              <md-menu-content>
+                <md-menu-item>My Item 1</md-menu-item>
+                <md-menu-item>My Item 2</md-menu-item>
+                <md-menu-item>My Item 3</md-menu-item>
+              </md-menu-content>
+            </md-menu>
             </md-content>     
             <md-content class="maincontent">
             </md-content>
@@ -80,7 +87,6 @@
 }
 
 .md-content {
-  
   z-index: 1;
   padding: 15px;
   margin: 0.2vh;
